# Traffic

./: CMakeLists.txt  readme.md
include/: car.hpp  crossings.hpp  item_manager.hpp  mainwindow.hpp  render.hpp  signals.hpp
src/: item_manager.cpp  main.cpp  mainwindow.cpp  render.cpp
src/items/: car.cpp  crossings.cpp  signals.cpp
